Add getDocumentList implementation
